// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`for the off.json config kwargs.rb matches expected output 1`] = `
"# frozen_string_literal: true

class KwargsTest < Minitest::Test
  def test_kwargs
    assert_equal 10, add(:alpha => 1, :beta => 2, :gamma => 3, :delta => 4)

    args = { :alpha => 1, :beta => 2, :gamma => 3 }
    assert_equal 10, add(**args, :delta => 4)
  end

  private

  def add(alpha:, beta:, gamma: 1, delta: 2)
    alpha + beta + gamma + delta
  end
end
"
`;

exports[`for the on.json config kwargs.rb matches expected output 1`] = `
"# frozen_string_literal: true

class KwargsTest < Minitest::Test
  def test_kwargs
    assert_equal 10, add(alpha: 1, beta: 2, gamma: 3, delta: 4)

    args = { alpha: 1, beta: 2, gamma: 3 }
    assert_equal 10, add(**args, delta: 4)
  end

  private

  def add(alpha:, beta:, gamma: 1, delta: 2)
    alpha + beta + gamma + delta
  end
end
"
`;
